components/sandbox/base/monitoring/prometheus-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-appstudio-monitoring
  namespace: toolchain-host-operator
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: appstudio-monitoring
  podSelector: {}
  policyTypes:
    - Ingress
